@@ -61,7 +61,7 @@ class SmartyTests extends PHPUnit_Framework_TestSuite {
      */
     public static function suite()
     {
-        $testorder = array('PluginModifierEscapeTests');
+        $testorder = array('IndexedFileResourceTests');
         $smarty_libs_dir = dirname(__FILE__) . '/../../distribution/libs';
         if (method_exists('PHPUnit_Util_Filter', $smarty_libs_dir)) {
             // Older versions of PHPUnit did not have this function,
